--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
+    "json-server": "^0.17.1",
     "prettier": "^2.7.1",
     "sass": "^1.57.1",
     "start-server-and-test": "^1.15.2",
