--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backend": "json-server --watch data.json"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
