--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backend": "json-server --watch data.json"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.7",
     "axios": "^1.2.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
