--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.7",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "axios": "^1.2.2",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
